# api/ddd/entity/labels.go
@@ -1,6 +1,0 @@
-package entity
-
-type Labels struct {
-	IBN     string `json:"ibn"`
-	HostIP  string `json:"hostIP"`
-}
