# api/request/metrics.go
@@ -8,9 +8,8 @@ type MetricsBatchQueryBody struct {
 
 type MetricsQueryInfo struct {
 	MetricUniqueID enum.MetricUniqueID `json:"metricUniqueID" binding:"required"`
-	IBN            string              `json:"ibn" binding:"required"`    // 算网名
-	HostIP         string              `json:"hostIP" binding:"required"` // 节点ip
-	Start          int64               `json:"start" binding:"required"`  // 开始时间
-	End            int64               `json:"end" binding:"required"`    // 结束时间
-	Step           uint                `json:"step" binding:"required"`   // 步长
+	LabelValue     map[string]string   `json:"labelValue" binding:"required"`
+	Start          int64               `json:"start" binding:"required"` // 开始时间
+	End            int64               `json:"end" binding:"required"`   // 结束时间
+	Step           uint                `json:"step" binding:"required"`  // 步长
 }
